{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "2d19ece9-75f1-493a-a8a9-82b71a39943b",
            "actions": [
                {
                    "name": "SayingSomething",
                    "type": "Button",
                    "id": "ba0de3df-3c7d-497e-a1c5-535239a9bb4c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TotalMovement",
                    "type": "Value",
                    "id": "19238ce7-8d1f-48e9-aa15-4638695be253",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bfb9994c-8d17-4cac-b571-10370f6fff24",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SayingSomething",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "c87c25f3-65f7-4638-aea6-033e8c5a94e8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TotalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2ff5bea6-1b14-4ea9-a7a1-fa31f9dd7009",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TotalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1a0e24b5-857e-4f37-8c9d-fb21db63d894",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TotalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7ec70776-8334-4d0d-9837-fd068fc6ff95",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TotalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0f0b0af0-0295-4372-bf46-051817ebcc38",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TotalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}